<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/home_top"
        android:padding="8dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/search"
            android:orientation="horizontal"
            android:padding="4dp"
            >
            <ImageView
                android:id="@+id/homeFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_home_white_24dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                />
            <androidx.appcompat.widget.SearchView
                android:id="@+id/homeSearchView"
                android:layout_width="340dp"
                android:layout_height="40dp"
                android:layoutDirection="rtl"
                android:padding="4dp"
                app:defaultQueryHint="@string/search_all_categories"
                android:layout_marginStart="8dp"
                />

        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/homeScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/seeAllCat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/andika"
                    android:text="@string/categories"
                    android:textSize="18sp"
                    android:layout_alignParentStart="true"
                    android:textColor="#000000"
                    />
                <!--                android:textColor="#6E586E"-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/andika"
                    android:text="@string/see_all"
                    android:textColor="#6E586E"
                    android:textSize="16sp"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>
            <!--            android:textColor="#af97af"-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/holderCatHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                />








            <RelativeLayout
                android:id="@+id/seeAllCategories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/andika"
                    android:text="@string/categories"
                    android:textSize="18sp"
                    android:layout_alignParentStart="true"
                    android:textColor="#000000"
                    />
<!--                android:textColor="#6E586E"-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/andika"
                    android:text="@string/see_all"
                    android:textColor="#6E586E"
                    android:textSize="16sp"
                    android:tag="@string/categories"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>
<!--            android:textColor="#af97af"-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/holderCategoriesHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                />
<!--            android:textColor="#292929"-->
            <RelativeLayout
                android:id="@+id/seeAllHotSales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/andika"
                    android:text="@string/hot_sale"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:layout_alignParentStart="true" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/andika"
                    android:text="@string/see_all"
                    android:textColor="#6E586E"
                    android:textSize="16sp"
                    android:tag="@string/hot_sale"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/holderHotSalesHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                />

            <RelativeLayout
                android:id="@+id/seeAllFeaturedProducts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/andika"
                    android:text="@string/featured_products"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:layout_alignParentStart="true" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/andika"
                    android:text="@string/see_all"
                    android:textColor="#6E586E"
                    android:textSize="16sp"
                    android:tag="@string/featured_products"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>
<!--            android:textColor="#af97af"-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/holderFeaturedProductsHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                />

            <RelativeLayout
                android:id="@+id/seeAllHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/andika"
                    android:text="@string/history"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:layout_alignParentStart="true" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/andika"
                    android:text="@string/see_all"
                    android:textColor="#6E586E"
                    android:textSize="16sp"
                    android:tag="@string/history"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/holderHistoryHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>

<com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
    android:id="@+id/home_fab"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="32dp"
    android:layout_marginEnd="16dp"
    android:layout_gravity="bottom|right"
    android:text="Explore"
    app:icon="@drawable/ic_explore_white_24dp"
    android:backgroundTint="#A386E1"
    android:textColor="#fff"
    app:iconTint="#fff"
    android:textSize="16sp"
    android:textAllCaps="false"
    />

</androidx.coordinatorlayout.widget.CoordinatorLayout>